# X.509-Certificate-Wed

./: .env.example  .gitignore  LICENSE  README.md  db.py  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  serviceAccountKey.json
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  api.md  main.py  pyproject.toml  seed_real_data.py
src/backend/api/: auth_routes.py  jwt_utils.py  middleware.py  routes.py
src/backend/api/auth/: auth_routes.py
src/backend/api/routers/: admin_revoke.py
src/backend/api/v1/: admin_revoke.py  approve.py  audit_logs.py  cert_request.py  certificate_inspector.py  certificates.py  crl.py  csr_generator.py  key_generator.py  root_ca.py  system_config.py  user_revoke.py
src/backend/core/: database.py
src/backend/core/crypto/: AES.py  RSA.py  cert_signer.py  (+4 more)
src/backend/database/: supabase.py
src/backend/db/: supabase_client.py
src/backend/router/: admin.py
src/backend/schema/: __init__.py  database_schema.py  examples.py  response.py
src/backend/secrets/: revoked_list.crl.example  rootCA.crt.example  rootCA.key.example
src/backend/service/: csr_service.py
src/backend/tests/: test_admin.py  test_admin_revoke.py  test_aes.py  test_api_system_config.py  test_approve.py  test_audit_logs_api.py  test_cert_request.py  test_cert_signer.py  test_certificate_inspector.py  test_certificate_inspector_api.py  test_crl_api.py  test_crl_service.py  test_csr_generator.py  test_csr_validator.py  test_db_write_read_data.py  test_jwt.py  test_rec_rq_service.py  test_revocation_service.py  test_rsa.py
(+185 files in other folders)
