[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "supabase>=2.28.3",
    "cryptography>=43.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
